[package]
name = "gharry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
log = "0.4.14"
regex = "1.5.4"
reqwest =  { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
